[package]
name = "wasm64"
version = "0.1.0"
authors = ["N1Z4M"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "wasm64_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
base64 = "0.12.3"
